--- a/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
@@ -21,48 +21,48 @@ For lists of Ruby gems included in different CloudForms Management Engine releas
 * https://access.redhat.com/articles/1534753
 ====
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/About_evm.root.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Method_Hierarchy.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Base_Methods.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Availability_Zones_availability_zone.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Classifications_classification.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Cloud_Networks_cloud_network.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Cloud_Resource_Quotas_cloud_resource_quota.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Cloud_Subnets_cloud_subnet.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Cloud_Tenants_cloud_tenant.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Customization_template.adoc[]
 
-
+:leveloffset: 2
 [[_sect_clusters_ems_cluster]]
-== Clusters (ems_cluster)
+= Clusters (ems_cluster)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -228,16 +228,16 @@ include::topics/Customization_template.adoc[]
   end
 ----
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Management_System_Events_ems_event.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Management_System_Folders_ems_folder.adoc[]
 
-
+:leveloffset: 2
 [[_sect_providers_ext_management_system]]
-== Providers (ext_management_system)
+= Providers (ext_management_system)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -421,37 +421,36 @@ include::topics/Management_System_Folders_ems_folder.adoc[]
   end
 ----
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Cloud_Providers_ems_cloud.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Firewall_Rules_firewall_rule.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Flavors_flavor.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Floating_IPs_floating_ip.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Guest_Applications_guest_application.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Guest_Device_guest_device.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Hardware_hardware.adoc[]
 
-
+:leveloffset: 2
 [[_sect_hosts_host]]
-== Hosts (host)
-
+= Hosts (host)
 
 
 [cols="1,1", frame="all", options="header"]
@@ -1036,16 +1035,16 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
   end
 ----
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Hosts_Vmware_ESX_host_vmware_esx.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/LAN_lan.adoc[]
 
-
+:leveloffset: 2
 [[_sect_groups_miq_group]]
-== Groups (miq_group)
+= Groups (miq_group)
 
 
 
@@ -1155,8 +1154,9 @@ include::topics/LAN_lan.adoc[]
   end
 ----
 
+:leveloffset: 2
 [[_sect_request_miq_request]]
-== Request (miq_request)
+= Request (miq_request)
 
 Request objects are submitted to CloudForms Management Engine Server for processing.
 After the request phase, the request becomes a task object.
@@ -1543,20 +1543,21 @@ Otherwise, the item can be modified on the individual task.
 						
 |===
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Automation_request.adoc[]
 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Miq_host_provision_request.adoc[]
 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Miq_provision_request.adoc[]
 
 
+:leveloffset: 2
 [[_sect_request_task_miq_request_task]]
-== Request Task (miq_request_task)
+= Request Task (miq_request_task)
 
 
 
@@ -1824,16 +1825,16 @@ include::topics/Miq_provision_request.adoc[]
 						
 |===
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Automation_task.adoc[]
 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Miq_host_provision.adoc[]
 
-
+:leveloffset: 3
 [[_sect_vm_provision_task_miq_provision]]
-=== VM Provision Task (miq_provision)
+= VM Provision Task (miq_provision)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -2470,36 +2471,37 @@ rescue => err
 end
 ----
 
-:leveloffset: 3
+:leveloffset: 4
 include::topics/Adding_Disks_to_OpenStack_Instance_Provisioning.adoc[]
 
 
-:leveloffset: 3
+:leveloffset: 4
 include::topics/Booting_OpenStack_Instances_from_Volume.adoc[]
 
 
-:leveloffset: 3
+:leveloffset: 4
 include::topics/VM_Provisioning_for_Clouds_Task_miq_provision_cloud.adoc[]
 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Service_template_provision_task.adoc[]
 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Service_Reconfiguration_Task_service_reconfigure_task.adoc[]
 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Vm_migrate_task.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Proxies_miq_proxy.adoc[]
 
 
+:leveloffset: 2
 [[_sect_servers_miq_server]]
-== Servers (miq_server)
+= Servers (miq_server)
 
 
 
@@ -2573,41 +2575,40 @@ These methods are available to the CloudForms Management Engine Server.
   end
 ----
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Network_network.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Pxe_image.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Pxe_server.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Security_Groups_security_group.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Service2.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Service_Resource_service_resource.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Service_Template.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Snapshot_snapshot.adoc[]
 
-
+:leveloffset: 2
 [[_sect_datastores_storage]]
-== Datastores (storage)
-
+= Datastores (storage)
 
 
 [cols="1,1", frame="all", options="header"]
@@ -2721,12 +2722,13 @@ include::topics/Snapshot_snapshot.adoc[]
   end
 ----
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Switch_switch.adoc[]
 
 
+:leveloffset: 2
 [[_sect_user_user]]
-== User (user)
+= User (user)
 
 
 
@@ -2912,8 +2914,9 @@ These methods can be used on the currently logged on user.
   end
 ----
 
+:leveloffset: 2
 [[_sect_virtual_machines_and_templates_vm_or_template]]
-== Virtual Machines and Templates (vm_or_template)
+= Virtual Machines and Templates (vm_or_template)
 
 The following methods can be used on a virtual machine or template object. 
 
@@ -3678,8 +3681,9 @@ The following methods can be used on a virtual machine or template object.
   end
 ----
 
+:leveloffset: 3
 [[_sect_vms_vm]]
-=== VMs (vm)
+= VMs (vm)
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -3819,16 +3823,17 @@ host = $evm.root['vm']
 cpu_rdy = vm.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes.ago.utc,5.minutes.ago.utc], :avg)
 ----
 
-:leveloffset: 3
+:leveloffset: 4
 include::topics/VMs_for_Clouds_vm_cloud.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Windows_image.adoc[]
 
 
+:leveloffset: 2
 [[_sect_creating_categories_and_tags]]
-== Creating Categories and Tags
+= Creating Categories and Tags
 
 These methods are invoked using $evm.execute.
 See after the table for usage examples. 
@@ -3907,10 +3912,10 @@ See after the table for usage examples.
 
 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Category_and_Tags_Methods_Example1.adoc[]
 
 
-:leveloffset: 1
+:leveloffset: 2
 include::topics/Quota2.adoc[]
 
