--- a/doc-Methods_Available_for_Automation/master.adoc
+++ b/doc-Methods_Available_for_Automation/master.adoc
@@ -5,9 +5,13 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :toc: left
 :toclevels: 3
 :experimental:
+:product-title: CloudForms Management Engine
 :numbered!:
 
 :numbered:
 :leveloffset: 1
 include::Methods_Available_for_Automation.adoc[]
+
+:leveloffset: 1
+include::Terminology.adoc[]
 
