--- a/doc-Red_Hat_CloudForms_REST_API/chap-Specification.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/chap-Specification.adoc
@@ -1,48 +1,45 @@
 [[_chap_specification]]
 = Specification
-:doctype: book
-:numbered:
-:toc: left
-:icons: font
-:experimental:
 
+:leveloffset: 2
 [[_sect_http_basics]]
-== HTTP Basics
+= HTTP Basics
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/REST_API_Entry_Point.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Supported_Content_Types.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/URL_Paths.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Methods_and_related_URLs.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Updating_Resources.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Modifying_Resource_Attributes.adoc[]
-:leveloffset: 0
+
+
+:leveloffset: 3
+include::topics/Return_Codes.adoc[]
+
 
 :leveloffset: 2
-include::topics/Return_Codes.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
 include::topics/CRUD_Examples.adoc[]
-:leveloffset: 0
 
+
+:leveloffset: 2
 [[_sect_authentication]]
-== Authentication
+= Authentication
 
 There are two methods of authentication for the CFME REST API: 
 
@@ -50,16 +47,17 @@ There are two methods of authentication for the CFME REST API:
 * Token based Authentication: the client requests a token for the username/password credentials specified.
   Then the token is used in lieu of the username/password for each subsequent API call. 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Using_Basic_Authentication.adoc[]
-:leveloffset: 0
+
+
+:leveloffset: 3
+include::topics/Using_Authentication_Tokens.adoc[]
+
 
 :leveloffset: 2
-include::topics/Using_Authentication_Tokens.adoc[]
-:leveloffset: 0
-
 [[_sect_json_specification]]
-== JSON Specification
+= JSON Specification
 
 The API uses JSON throughout; the Content-Type for all requests and responses is [literal]+application/json+. 
 
@@ -69,39 +67,40 @@ To keep this document readable, we still mention specific URL's, generally in th
 Clients should not use these, or assume that the actual URL structure follows these examples, and instead use discovered URL's.
 Any client should start its discovery with the API entry point, here denoted with [literal]+/api+. 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Basic_types.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Common_Attributes_and_Actions.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Collections4.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Actions4.adoc[]
-:leveloffset: 0
+
+
+:leveloffset: 3
+include::topics/Forms1.adoc[]
+
 
 :leveloffset: 2
-include::topics/Forms1.adoc[]
-:leveloffset: 0
-
 [[_sect_query_specification]]
-== Query Specification
+= Query Specification
 
 This specification identifies the controls available when querying collections. 
 
-:leveloffset: 2
+:leveloffset: 3
 include::topics/Control_Attributes.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Filtering.adoc[]
-:leveloffset: 0
 
-:leveloffset: 2
+
+:leveloffset: 3
 include::topics/Expanding_Collections1.adoc[]
-:leveloffset: 0
+
