--- a/doc-Red_Hat_CloudForms_REST_API/topics/Available_Actions.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/Available_Actions.adoc
@@ -14,156 +14,602 @@
 | 
 						Example
 					
-
 |
-
-|
+						Add Service Catalog
 
 | 
-						/api/service_catalogs/id
-					
-|
-
-|
-
-|
-
-|
+						POST
 
 | 
-						/api/services/id
-					
-|
+						/api/service_catalogs
 
 | 
-						/api/services/id
-					
+//<xref linkend="Adding_a_Sample_Service_Catalog" />
+
+
 |
+						Add Service Catalogs
+
+|
+						POST
+
+|
+						/api/service_catalogs
 
 | 
-						/api/services/id
-					
+//<xref linkend="Adding_Multiple_Service_Catalogs" />
+ 
 |
+						Edit Service Catalog
 
 |
+						POST
+
+|
+						/api/service_catalogs/<replaceable>id</replaceable>
 
 | 
-						/api/services/id/tags
-					
+//<xref linkend="Edit_a_Service_Catalog" />
+
+
 |
+						Edit Service Catalogs
+
+|
+						POST
+
+|
+						/api/service_catalogs
 
 | 
-						/api/services/id/tags
-					
+//<xref linkend="Edit_Multiple_Service_Catalogs" />
+ 
 |
+						Automation Request
+
+|
+						POST
+
+|
+						/api/automation_requests
 
 | 
-						/api/services/id/tags
-					
+//<xref linkend="Trigger_a_Single_Automation_Request" />
+
+
 |
+						Automation Requests
+
+|
+						POST
+
+|
+						/api/automation_requests
 
 | 
-						/api/services/id/tags
-					
+//<xref linkend="Trigger_Multiple_Automation_Requests" />
+
+
 |
+						Edit Service
+
+|
+						POST
+
+|
+						/api/services/<replaceable>id</replaceable>
 
 | 
-						/api/services/id
-					
+//<xref linkend="Edit_a_Service" />
+ 
 |
+						Edit Service via PUT
+
+|
+						PUT
+
+|
+						/api/services/<replaceable>id</replaceable>
 
 | 
-						/api/services/id
-					
-|
+//<xref linkend="Edit_a_Service_via_a_PUT_Request" />
+
 
 |
+						Edit Service via PATCH
+
+|
+						PATCH
+
+|
+						/api/services/<replaceable>id</replaceable>
 
 | 
-						/api/services/id
-					
+//<xref linkend="Edit_a_Service_via_a_PATCH_Request" />
+
 
 |
+						Edit Services
+
+|
+						POST
+
+|
+						/api/services/
 
 | 
-						/api/service_templates/id
-					
-|
+//<xref linkend="Edit_Multiple_Services" />
+
 
 |
+						Assign Tags to a Service
+
+|
+						POST
+
+|
+						/api/services/<replaceable>id</replaceable>/tags
 
 | 
-						/api/service_templates/id/tags
-					
+//<xref linkend="Assign_Tags_to_a_Service" />
+
+
 |
+						Assign a Tag by Name to a Service
+
+|
+						POST
+
+|
+						/api/services/<replaceable>id</replaceable>/tags
 
 | 
-						/api/service_templates/id/tags
-					
+//<xref linkend="Assign_a_Tag_by_Name_to_a_Service" />
+
+
 |
+						Assign a Tag by Name to a Service
+
+|
+						POST
+
+|
+						/api/services/<replaceable>id</replaceable>/tags
 
 | 
-						/api/service_templates/id
-					
+//<xref linkend="Assign_a_Tag_by_Reference_to_a_Service" />
+
 
 |
+						Unassign Tags from Service
+
+|
+						POST
+
+|
+						/api/services/<replaceable>id</replaceable>/tags
 
 | 
-						/api/service_catalogs/id/service_templates
-					
+//<xref linkend="Unassign_Tags" />
+
+
 |
+						Retire Service Now
+
+|
+						POST
+
+|
+						/api/services/<replaceable>id</replaceable>
 
 | 
-						/api/service_catalogs/id/service_templates
-					
+//<xref linkend="Retire_a_Service" />
+ 
 |
+						Retire Service in Future
+
+|
+						POST
+
+|
+						/api/services/<replaceable>id</replaceable>
 
 | 
-						/api/service_catalogs/id/service_templates
-					
+//<xref linkend="Retire_a_Service" />
+
+
 |
+						Retire Services
+
+|
+						POST
+
+|
+						/api/services
 
 | 
-						/api/service_catalogs/id/service_templates
-					
+//<xref linkend="Retire_Multiple_Services" />
+
+
 |
+						Delete Service
+
+|
+						DELETE
+
+|
+						/api/services/<replaceable>id</replaceable>
+
+|
+ 
+|
+						Delete Services
+
+|
+						POST
+
+|
+						/api/services
 
 | 
-						/api/service_catalogs/id
-					
+//<xref linkend="Delete_Services" />
+
+ 
+|
+						Edit Service Template
+
+|
+						POST
+
+|
+						/api/service_templates/<replaceable>id</replaceable>
+
+| 
+//<xref linkend="Edit_a_Service_Template" />
+
+
+|
+						Edit Service Templates
+
+|
+						POST
+
+|
+						/api/service_templates
+
+| 
+//<xref linkend="Edit_Multiple_Service_Templates" />
+
+ 
+|
+						Assign Tags to Service Template
+
+|
+						POST
+
+|
+						/api/service_templates/<replaceable>id</replaceable>/tags
+
+| 
+//<xref linkend="Assign_Tags_to_a_Service_Template" />
+
+
+|
+						Unassign Tags from Service Template
+
+|
+						POST
+
+|
+						/api/service_templates/<replaceable>id</replaceable>/tags
+
+| 
+//<xref linkend="Unassign_Tags_from_a_Service_Template" />
+
+
+|
+						Delete Service Template
+
+|
+						DELETE
+
+|
+						/api/service_templates/<replaceable>id</replaceable>
+
+|
+ 
+|
+						Delete Service Templates
+
+|
+						POST
+
+|
+						/api/service_templates
+
+| 
+//<xref linkend="Delete_Multiple_Service_Templates" />
+
+|
+						Assign Service Templates
+
+|
+						POST
+
+|
+						/api/service_catalogs/<replaceable>id</replaceable>/service_templates
+
+| 
+//<xref linkend="Assign_Service_Templates_to_Service_Catalogs" />
+
+
+|
+						Unassign Service Templates
+
+|
+						POST
+
+|
+						/api/service_catalogs/<replaceable>id</replaceable>/service_templates
+
+| 
+//<xref linkend="Unassign_Service_Templates_from_a_Service_Catalog" />
+
+|
+						Order Service
+
+|
+						POST
+
+|
+						/api/service_catalogs/<replaceable>id</replaceable>/service_templates
+
+| 
+//<xref linkend="Order_a_Service_from_a_Service_Catalog" />
+
+
+|
+						Order Services
+
+|
+						POST
+
+|
+						/api/service_catalogs/<replaceable>id</replaceable>/service_templates
+
+| 
+//<xref linkend="Order_Multiple_Services_from_a_Service_Catalog" />
+
+|
+						Delete Service Catalog
+
+|
+						DELETE
+
+|
+						/api/service_catalogs/<replaceable>id</replaceable>
 
 |
 
 |
+						Delete Service Catalogs
+
+|
+						POST
+
+|
+						/api/service_catalogs
+
+| 
+//<xref linkend="Delete_Multiple_Service_Catalogs" />
+
+
+|
+						Provision Request
+
+|
+						POST
+
+|
+						/api/provision_requests
+
+| 
+//<xref linkend="Trigger_a_Single_Provisioning_Request" />
+
+
+|
+						Provision Requests
+
+|
+						POST
+
+|
+						/api/provision_requests
+
+| 
+//<xref linkend="Trigger_Multipe_Provisioning_Requests" />
+
+
+|
+						Create a Provider
+
+|
+						POST
+
+|
+						/api/providers
+
+|
+//<xref linkend="Create_a_Provider" />
+
+|
+						Create a Provider with Compound Credentials
+
+|
+						POST
+
+|
+						/api/providers
+
+|
+//<xref linkend="Create_a_Provider_with_Compound_Credentials" />
+
+
+|
+						Edit a Provider
+
+|
+						POST
+
+|
+						/api/providers
 
 |
 
 |
+						Update a Provider
 
 |
+						POST
+
+|
+						/api/providers
+
+|
+//<xref linkend="Update_a_Provider" />
+
+|
+						Delete a Provider
+
+|
+						POST
+
+|
+						/api/providers
+
+|
+//<xref linkend="Delete_a_Provider" />
+
+ 
+|
+						Delete Multiple Providers
+
+|
+						POST
+
+|
+						/api/providers
+
+|
+//<xref linkend="Deleting_Multiple_Providers" />
+
+|
+						Refresh a Provider
+
+|
+						POST
+
+|
+						/api/providers
+
+|
+//<xref linkend="Refresh_a_Provider" />
+
+|
+						Scan a VM
+
+|
+						POST
+
+|
+						/api/vms
+
+|
+//<xref linkend="Scan_a_Virtual_Machine" />
+
+|
+						Set Owner of a VM
+
+|
+						POST
+
+|
+						/api/vms
+
+|
+//<xref linkend="Set_the_Owner_of_a_Virtual_Machine" />
+
+|
+						Add a Lifecycle Event to a VM
+
+|
+						POST
+
+|
+						/api/vms
+
+|
+//<xref linkend="Add_a_Lifecycle_Event_to_a_Virtual_Machine" />
 
 
 |
+						Add an Event to a VM
 
 |
+						POST
 
 |
+						/api/vms
 
 |
+//<xref linkend="Add_Event" />
 
 |
+						Start a VM
 
 |
+						POST
 
 |
+						/api/vms
 
 |
+//<xref linkend="Start_a_Virtual_Machine" />
 
 |
+						Stop a VM
 
 |
+						POST
 
 |
+						/api/vms
 
 |
+//<xref linkend="Stop_a_Virtual_Machine" />
+
+|
+						Suspend a VM
+
+|
+						POST
+
+|
+						/api/vms
+
+|
+//<xref linkend="Suspend_a_Virtual_Machine" />
+
+|
+						Delete VMs
+
+|
+						DELETE
+
+|
+						/api/vms
+
+|
+//<xref linkend="Delete_Virtual_Machines" />
 |===
+
