--- a/doc-Red_Hat_CloudForms_REST_API/topics/Sub-Collection_Queries.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/Sub-Collection_Queries.adoc
@@ -1,36 +1,20 @@
 = Sub-Collection Queries
 
-[cols="1,1", options="header"]
-|===
-| 
-						Sub-Collection
-					
-| 
-						URL
-					
+[cols="<,<",options="header",]
+|=======================================================================
+|Sub-Collection | URL
+|Tagging | /api/<collection>/:id/tags
+|Policies | /api/<collection>/:id/policies
+|Policy Profiles | /api/<collection>/:id/policy_profiles
+| |
+|Service Requests | /api/service_templates/:id/service_requests
+|Request Tasks |
+| | /api/service_requests/:id/request_tasks
+| | /api/automation_requests/:id/request_tasks
+| | /api/provision_requests/:id/request_tasks
+|Request Tasks can also be accessed via the tasks alias |
+| | /api/service_requests/:id/tasks
+| | /api/automation_requests/:id/tasks
+| | /api/provision_requests/:id/tasks
+|=======================================================================
 
-| 
-						/api/collection/id/service_templates
-					
-
-| 
-						/api/collection/id/tags
-					
-
-
-| 
-						/api/automation_requests/id/request_tasks
-					
-
-| 
-						/api/automation_requests/id/tasks (alias of request_tasks)
-					
-
-| 
-						/api/provision_requests/id/request_tasks
-					
-
-| 
-						/api/provision_requests/id/tasks (alias of request_tasks)
-					
-|===
