--- a/doc-Red_Hat_CloudForms_REST_API/topics/Using_Authentication_Tokens.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/Using_Authentication_Tokens.adoc
@@ -1,6 +1,7 @@
 = Using Authentication Tokens
 
-* .Authentication Tokens:are associated with the user credential 
+.Authentication Tokens:
+* are associated with the user credential 
 * provide the necessary identify for RBAC in subsequent REST calls 
 * expire after a certain amount of time - 10 minutes by default. 
 
