--- a/doc-Red_Hat_CloudForms_REST_API/topics/Authentication11.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/Authentication11.adoc
@@ -1,16 +1,12 @@
 [[_authentication11]]
 = Authentication
 
-[cols="1,1", options="header"]
-|===
-| 
-						Type
-					
-| 
-						Mechanism
-					
+[cols="<,<",options="header",]
+|=====================================================================
+|Type |Mechanism
+|Basic Authentication |Basic HTTP Authorization with user and password
+|Token Based Authentication |
+|- Acquiring Token |/api/auth with Basic Authentication
+|- Authenticating with Token |X-Auth-Token Header
+|=====================================================================
 
-
-
-
-|===
