--- a/doc-Red_Hat_CloudForms_REST_API/topics/Common_Attributes_and_Actions.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/Common_Attributes_and_Actions.adoc
@@ -3,23 +3,13 @@
 The following describes attributes and actions that are shared by all resources and collections defined in this API. 
 
 .Attributes
-
-
-[cols="1,1,1", options="header"]
-|===
-| 
-								Attribute
-							
-| 
-								Type
-							
-| 
-								Description
-							
-
-
-
-|===		
+[cols="<,<,<",options="header",]
+|======================================================================
+|Attribute | Type | Description
+|id | Integer | An integer identifier for the referenced resource
+|href | Ref(self) | A unique self reference
+|name | String | A human name of the resource
+|======================================================================
 
 [source]
 ----
@@ -32,22 +22,13 @@ The following describes attributes and actions that are shared by all resources 
 ----
 
 .Actions
-
-
-[cols="1,1,1", options="header"]
-|===
-| 
-								Action
-							
-| 
-								HTTP method
-							
-| 
-								Description
-							
-
-
-
-|===		
+[cols="<,<,<",options="header",]
+|======================================================================
+|Action | HTTP method | Description
+|create | POST | Create new resource in the collection
+|edit | PUT/PATCH/POST | Edit attributes in resource
+|delete | DELETE | Delete resource
+|======================================================================
 
 NOTE: The availability of these common actions depends on the role and permissions that the current API user has for a particular resource. 
+
