--- a/doc-Red_Hat_CloudForms_REST_API/topics/HTTP_Headers.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/HTTP_Headers.adoc
@@ -1,15 +1,11 @@
 = HTTP Headers
 
-[cols="1,1", options="header"]
-|===
-| 
-						Header
-					
-| 
-						Value
-					
+[cols="<,<",options="header",]
+|==================================================
+|Header |Value
+|Authorization |Basic base64_encoded(user:password)
+|X-Auth-Token |Token provided by /api/auth
+|Accept |application/json
+|Content-Type |application/json
+|==================================================
 
-
-
-
-|===
