Updated images and content in the Introduction to Self Service Portal

--- a/doc-Introduction_to_Self_Service_Portal/My_Requests_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/My_Requests_Tab.adoc
@@ -4,7 +4,10 @@
 
 Use the +My Requests+ tab to filter and view details of the services.
 
-image:SS_MyRequests.png[My Requests Tab]
+image:cfme_ss_myrequests.png[My Requests Tab]
 
 Optionally, you can set a string in the filter field at the top to filter services by Description, Request Id, or Request Status.
-You can also sort the services in ascending or descending order by Requested Date, Description, ID, or Status. Select a request from the results to view details.
+You can also sort the services in ascending or descending order by Requested Date, Description, ID, or Status. Select a request from the results to view the live status of the request.
+
+image:cfme_ss_myrequests_item.png[]
+
