--- a/doc-Introduction_to_Self_Service_Portal/Self_Service_Login.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/Self_Service_Login.adoc
@@ -1,8 +1,8 @@
 [[self-service]]
 
-== Red Hat CloudForms Self Service
+== CFME Self Service
 
-Red Hat CloudForms Self Service is a web-based graphical user interface for ordering and managing IT services, such as applications and services.
+CloudForms Management Engine (CFME) Self Service is a web-based graphical user interface for ordering and managing IT services, such as applications and services.
 You can enable self-service tenant end users, who can easily access their services, track requests, and manage their accounts.
 
 To access Self Service, you must know the portal host name (or IP) and login password. Note that the Self Service user interface is running by default and does not need to be started or configured. The Self Service URL is:
@@ -12,4 +12,4 @@ To access Self Service, you must know the portal host name (or IP) and login pas
 https://_HOSTNAME_/self_service/
 ----
 
-image:SS_Login.png[Self Service Login Screen]
+image:cfme_ss_login.png[Self Service Login Screen]
