--- a/doc-Introduction_to_Self_Service_Portal/Dashboard_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/Dashboard_Tab.adoc
@@ -2,13 +2,13 @@
 
 == The Dashboard Tab
 
-When you log in to the Self Service portal, you can see the dashboard screen by default. The +Dashboard+ tab provides a quick summary of services and requests as below:
+When you log in to the self-service portal, you can see the dashboard screen by default. The +Dashboard+ tab provides a quick summary of services and requests as below:
 
 * The total number of services
-* Active Services
+* Active services
 * Services expiring soon
 * The total number of requests
 * Pending requests
 * Denied requests
 
-image:SS_Dashboard.png[Dashboard Tab]
+image:cfme_ss_dashboard.png[Dashboard Tab]
