--- a/doc-Introduction_to_Self_Service_Portal/Service_Catalog_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/Service_Catalog_Tab.adoc
@@ -4,7 +4,9 @@
 
 Select +Service Catalog+ to view the service catalog.
 
-image:SS_Catalog.png[Service Catalog Tab]
+image:cfme_ss_catalog.png[Service Catalog Tab]
 
-The service items are displayed as tiles on the catalog page. Optionally, you can set a string in the filter field at the top to filter by Service Name, Service Description, or Catalog Name.
+Service items are displayed as tiles on the catalog page. Optionally, set a string in the filter field at the top to filter by Catalog Name, Service Name and Service Description.
 Select a service catalog from the results to view details.
+
+image:cfme_ss_catalog_filter.png[]
