--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_CFME_For_OpenShift_Deployment.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_CFME_For_OpenShift_Deployment.adoc
@@ -1,7 +1,7 @@
 [[preparing_cfme_for_openshift_deployment]]
 == Preparing CloudForms Management Engine for OpenShift Deployment
 
-=== The_oo-install-ose_Tool
+=== The oo-install-ose Tool
 
 Installation of OpenShift Enterprise requires CloudForms Management Engine 5.3.2 or greater, and the oo-install-ose tool. The oo-install-ose tool is a technology preview feature.
 
