Added Microsoft Azure Integration enhancement

--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -40,6 +40,18 @@ The Event Switchboard delivers the following capabilities:
 * Move the current event definitions into the database.
 * Map the events through to automation.
 
+*Microsoft Azure Providers*
+
+Red Hat CloudForms now provides a new provider to enable deep Microsoft Azure Integration, providing capabilities such as inventory and provisioning.
+
+The Microsoft Azure Integration will deliver the following capabilities to Red Hat CloudForms:
+
+* Inventory
+* Component Inventory
+* Capacity
+* Relationships
+* Utilization 
+
 *Multi Tenancy*
 
 Multitenancy in Red Hat CloudForms offers several enhancements, with an ability to:
