Added 'Tasks' tab information

--- a/doc-General_Configuration_Guide/Settings_Overview.adoc
+++ b/doc-General_Configuration_Guide/Settings_Overview.adoc
@@ -7,5 +7,6 @@ The availability of each sub-tab depends on the role assigned to your user accou
 The following is a list of the sub-tabs available from the +Configure+ menu:
 
 * +My Settings+ is available to all CloudForms Management Engine users. Its settings control the visual aspects of the console, time profiles, and tags used by the individual user.
+* +Tasks+ is used to view  virtual machine SmartState Analysis tasks that can be tracked through the console. The status of each task is displayed including time started, time ended, what part of the task is currently running, and any errors encountered. 
 * +Configuration+ is used to specify enterprise, region, zone, and server settings for the CloudForms Management Engine infrastructure. Diagnostics including logs and process status is also shown here.
 * +About+ provides session information and links to CloudForms Management Engine documentation as well as the Red Hat Customer Portal.
