Removed empty Image lables

--- a/doc-General_Configuration_Guide/My_Settings.adoc
+++ b/doc-General_Configuration_Guide/My_Settings.adoc
@@ -107,10 +107,9 @@ Use the following procedure to set default views for clouds.
 
 . Navigate to +Configure → My Settings+, then click on the +Default Views+ tab.
 . In the +Clouds+ area, click the appropriate button for the way you want to view each item.
-[IMAGE]
-* Click [IMAGE] (+Grid View+) to view virtual thumbnails or icons.
-* Click [IMAGE] (+Tile View+) for a view that combines the virtual thumbnail with some text properties that describe the items.
-* Click [IMAGE] (+List View+) to view a detailed text listing.
+* Click image:2020.png[] (+Grid View+) to view virtual thumbnails or icons.
+* Click image:2021.png[] (+Tile View+) for a view that combines the virtual thumbnail with some text properties that describe the items.
+* Click image:2022.png[] (+List View+) to view a detailed text listing.
 . Click +Save+.
 
 
@@ -137,8 +136,7 @@ You can set the default filters displayed for your hosts, virtual machines, and 
 To Set Default Filters for Hosts:
 
 . Navigate to +Configure → My Settings+, then click on the +Default Filters+ tab.
-. In the +Hosts+ folder, select the default filters that you want available on the +Hosts+ page. Items that have changed show in blue, bold text. Not all filters are listed in the figure below.
-[IMAGE]
+. In the +Hosts+ folder, select the default filters that you want available on the +Hosts+ page. Items that have changed show in blue, bold text. 
 . Click +Save+.
 
 
