--- a/doc-General_Configuration_Guide/My_Settings.adoc
+++ b/doc-General_Configuration_Guide/My_Settings.adoc
@@ -53,8 +53,15 @@ Use the following procedure to set your own themes, colors, and time zone for th
 . Navigate to +Configure → My Settings+, then click on the +Visual+ tab.
 . Make selections from +Display Settings+ for the following items.
 . Use +Chart Theme+ to select a group of colors and font sizes specifically for charts.
-. Use +Time Zone+ footnoteref:[Timezone,In time zones where clocks are set forward for daylight savings time, the time zone correctly displays as EDT (Eastern Daylight Time) in the console. When the clocks are set back, it correctly displays as EST (Eastern Standard Time).] to select the time zone in which to display the console.
-. Use +Locale+ to select the language in which to display the console.
+.  
+. Use +Time Zone+ to select the time zone in which to display the console.
++
+[NOTE]
+===========
+In time zones where clocks are set forward for daylight savings time, the time zone correctly displays as EDT (Eastern Daylight Time) in the console. When the clocks are set back, it correctly displays as EST (Eastern Standard Time).
+===========
++
+. Use +Locale+ to select the language in which to display the console.. 
 . Click +Save+.
 
 === Default Views
