[auth] updated sed command for NM_CONTROLLED
- Needed it to work with ifcfg-eth0 with or without the NM_CONTROLLED= line,
so simply zapping and adding at the end.

--- a/auth/active_directory.adoc
+++ b/auth/active_directory.adoc
@@ -25,7 +25,7 @@ can still join an AD domain if known by the domain name.
 ----
 # systemctl enable NetworkManager
 # systemctl start NetworkManager
-# sed -i 's/^NM_CONTROLLED=no$/NM_CONTROLLED=yes/' /etc/sysconfig/network-scripts/ifcfg-eth0
+# sed -i '/^NM_CONTROLLED=.*/d;$aNM_CONTROLLED=yes' /etc/sysconfig/network-scripts/ifcfg-eth0
 # systemctl restart network
 ----
 
