--- a/doc-Introduction_to_Self_Service_Portal/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/My_Services_Tab.adoc
@@ -12,7 +12,7 @@ On this page, you can retire the service now or at a later date, edit or remove 
 
 To retire or remove the service:
 
-* Click the Retire button to remove it on a schedule, and enter the date to retire it.
-* Click the Remove button to retire the service immediately.
+* Click +Retire+ to remove it on a schedule, and enter the date to retire it.
+* Click +Remove+ to retire the service immediately.
 
 image:cfme_ss_myservices_item.png[]
