Updated and removed references to the old Insight Guide.

--- a/doc-Defining_Policies_and_Profiles/topics/To_create_a_Condition_to_check_file_contents_of_a_host.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_a_Condition_to_check_file_contents_of_a_host.adoc
@@ -7,9 +7,8 @@ expressions are used to create the search pattern. Test your regular
 expressions thoroughly before using them in a production environment.
 
 Note that to search file contents you will need to have collected the
-file using a host analysis profile. See
-https://access.redhat.com/documentation/en-US/CloudForms/3.1/html/Management_Engine_5.3_Insight_Guide/index.html[CloudForms
-Management Engine Insight Guide] for instructions.
+file using a host analysis profile. See Managing Infrastructure and
+Inventory for instructions.
 
 . Navigate to `Control` -> `Explorer`.
 
