--- a/doc-Integration_with_Red_Hat_Satellite/Tagging_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Tagging_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
@@ -15,5 +15,5 @@ The bare metal system is now configured with a set of policy tags.
 
 [NOTE]
 ======
-For more information on tags and system policy, see the Red Hat CloudForms 4.0 Insight Guide.
+For more information on tags and system policy, see Defining Policies and Profiles.
 ======
