--- a/doc-Monitoring_Alerts_and_Reporting/Reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Reports.adoc
@@ -21,7 +21,7 @@ Each category has its own set of subfolders.
 * [label]#Trending# shows projections of datastore capacity and host CPU and memory use. 
 * [label]#Provisioning# shows provisioning activity based on the approver, datastore, requester, and virtual machine. 
 
-For a complete list of Reportable Fields in CloudForms Management Engine, see appendix https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Insight_Guide/appe-Reportable_Fields_in_CloudForms_Management_Engine.html[Reportable Fields in CloudForms Management Engine] in the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Insight_Guide/index.html[Red Hat CloudForms 4.0 Insight Guide]. 
+For a complete list of Reportable Fields in CloudForms Management Engine, see xref:_appe_reportable_fields_in_cloudforms_management_engine[]
 
 :leveloffset: 2
 include::running_reports.adoc[]
