--- a/doc-Monitoring_Alerts_and_Reporting/Usage.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Usage.adoc
@@ -7,9 +7,9 @@ This allows you to find which virtual machines are using or overusing resources.
 There are two requirements to use this feature: 
 
 * You must assign tags to the virtual machines that you want to collect usage data for.
-  See section https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Insight_Guide/sect-Virtual_Machines.html#To_tag_Virtual_Machines_and_Templates[Tagging Virtual Machines and Templates] in the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Insight_Guide/index.html[Red Hat CloudForms 4.0 Insight Guide]. 
+  See "Tagging Virtual Machines and Templates" in Managing Infrastructure and Inventory. 
 * Capacity and utilization collection must be enabled.
-  For more information on configuring capacity and utilization charts, see the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/User_Guide/index.html[Red Hat CloudForms 4.0 User Guide]. 
+  For more information on configuring capacity and utilization charts, see the Deployment Planning Guide. 
 
 :leveloffset: 2
 include::topics/To_access_Usage_data.adoc[]
