--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
@@ -27,7 +27,7 @@ IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name.
 [NOTE]
 ====
 To obtain historical Capacity and Utilization (C & U) data for Red Hat Enterprise Virtualization Manager, you must create a CloudForms Management Engine user in the already-configured Red Hat Enterprise Virtualization Data Warehouse database.
-To create the user, see section Data Collection for Red Hat Enterprise Virtualization 3.1 and 3.2 in the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Insight_Guide/index.html[Red Hat CloudForms 4.0 Insight Guide]. 
+To create the user, see section "Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4" in the Deployment Planning Guide. 
 
 For information on setting up the Data Warehouse service on the Manager, see the Red Hat Enterprise Virtualization Installation Guide. 
 ====
