Removed procedure references and standardized Note box formatting.

--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -4,7 +4,6 @@ CloudForms Management Engine supports operating with the OpenStack "admin" tenan
 When creating an OpenStack provider in CloudForms Management Engine, select the OpenStack provider's admin user because it is the default administrator of the OpenStack admin tenant.
 When using the admin credentials, a user in CloudForms Management Engine provisions into the admin tenant, and sees images, networks, and instances that are associated with the admin tenant. 
 
-.Procedure: To Add an OpenStack Provider
 . Navigate to menu:Clouds[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a New Cloud Provider)]. 
 . Enter a [label]#Name# for the provider. 
@@ -38,5 +37,8 @@ IMPORTANT: To enable discovery of OpenStack cloud providers, ensure that the [pa
 
 . Click [label]#Add#. 
 
-NOTE: In order to collect inventory and metrics from an OpenStack environment, the CloudForms Management Engine Appliance requires that the adminURL endpoint for the OpenStack environment should be on a non-private network.
+[NOTE]
+======
+In order to collect inventory and metrics from an OpenStack environment, the CloudForms Management Engine Appliance requires that the adminURL endpoint for the OpenStack environment should be on a non-private network.
 Hence, the OpenStack adminURL endpoint should be assigned an IP address other than [literal]+192.168.x.x+. 
+======
