--- a/doc-Managing_Providers/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
@@ -2,9 +2,11 @@
 
 You can view capacity and utilization data for a datastore. 
 
-NOTE: CloudForms Management Engine requires network visibility to your provider assigned the server role of [label]#Capacity & Utilization Collector# to enable this feature. 
+[NOTE]
+======
+CloudForms Management Engine requires network visibility to your provider assigned the server role of [label]#Capacity & Utilization Collector# to enable this feature. 
+======
 
-.Procedure: To View Capacity and Utilization Charts for a Datastore
 . Navigate to menu:Infrastructure[Datastores], then click the Datastore that you want to view Capacity and Utilization data for. 
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] (btn:[Utilization]) or from the Datastore Accordion, click menu:Properties[Capacity & Utilization]. 
 . From [label]#Interval#, select to view hourly or daily data points and the dates to view data.
