--- a/doc-General_Configuration_Guide/Settings_Overview.adoc
+++ b/doc-General_Configuration_Guide/Settings_Overview.adoc
@@ -1,7 +1,7 @@
 [[settings-overview]]
 == Settings Overview
 
-To view or modify global settings for your appliance, hover over the +Configure+ menu and click the sub-tab for the setting to modify.
+To view or modify global settings for your appliance, hover over the +Configure+ menu and click the sub-tab +My Settings+ to modify.
 The availability of each sub-tab depends on the role assigned to your user account. For more information on roles, see section +Account Roles and Descriptions+.
 
 The following is a list of the sub-tabs available from the +Configure+ menu:
