--- a/doc-General_Configuration_Guide/Smart_Proxies.adoc
+++ b/doc-General_Configuration_Guide/Smart_Proxies.adoc
@@ -27,9 +27,9 @@ Set the credentials and operating system for the target host to prepare for the 
 
 To Enter Credentials and Operating System for the Target Host:
 
-. Navigate to Infrastructure → Hosts.
+. Navigate to +Infrastructure → Hosts+.
 . Select the host you want to edit.
-. Click image:1847.png[] (Configuration), then image:1851.png[] (Edit this item).
+. Click image:1847.png[] (+Configuration+), then image:1851.png[] (+Edit this item+).
 . In the Credentials box, click the Default tab and enter your login credentials.
 If you are using domain credentials, the format for User ID must be in the format of <domainname>\<username>.
 For ESX hosts, if SSH login is disabled for the default user, click the Remote Login tab and enter a user with remote login access.
@@ -39,14 +39,10 @@ image:2112.png[]
 If the target is a Windows host, disconnect all network connections between the Windows proxy and the target.
 If an existing connection uses a different set of credentials than those set in the console, the installation may fail.
 =============
-. Click Validate to verify the credentials.
-. If you added the host manually instead of Host Discovery or Provider Refresh finding it, select the host's operating system from the Host Platform drop-down box to ensure the host platform is available.
-. Click Save.
+. Click +Validate+ to verify the credentials.
+. If you added the host manually instead of +Host Discovery+ or +Provider Refresh+ finding it, select the host's operating system from the +Host Platform+ drop-down box to ensure the host platform is available.
+. Click +Save+.
 
-When remotely installing on Windows hosts, the SmartProxy file is first
-copied to a Windows proxy. That computer then installs the file to the
-target host. The Windows proxy is the same as when you select the Default
-Repository SmartProxy box located by navigating to Configure →
-Configuration, then clicking on the desired server, then the Server tab, and exploring the Server Control area.
+When remotely installing on Windows hosts, the SmartProxy file is first copied to a Windows proxy. That computer then installs the file to the target host. The Windows proxy is the same as when you select the Default Repository SmartProxy box located by navigating to +Configure → Configuration+, then clicking on the desired server, then the +Server+ tab, and exploring the +Server Control+ area.
 
 
