Made minor edits to AsciiDoc syntax.

--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
@@ -38,8 +38,8 @@ Trap Object ID and Suffix Number
 
 . Click `Add`.
 
-______________________________________________________________
-*Note*
-
+[NOTE]
+======
 When adding an SNMP action, be sure to set it as asynchronous.
-______________________________________________________________
+======
+
