Corrected a link to the Release Notes.

--- a/doc-Scripting_Actions_in_CloudForms/chap_automation_model.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/chap_automation_model.adoc
@@ -86,11 +86,8 @@ document the use of gems either in the core set or a custom set. It is
 the responsibility of the author of such custom automation to own the
 life cycle of any gem being referenced in those methods.
 
-The
-https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Release_Notes/index.html[Red
-Hat CloudForms 3.2 Release Notes] list Ruby gems that have been added,
-updated, or removed in the latest version of CloudForms Management
-Engine.
+The Release Notes list Ruby gems that have been added, updated, or
+removed in the latest version of CloudForms Management Engine.
 
 For lists of Ruby gems included in different CloudForms Management
 Engine releases, see the following article:
