--- a/doc-Provisioning_Virtual_Machines_and_Hosts/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/Catalogs_and_Services.adoc
@@ -9,14 +9,14 @@ Through the use of catalogs, CloudForms Management Engine provides support for m
 
 *Terminology*
 
-Catalog Bundle:: A grouping of Templates.
-Catalog Item:: A single Template or a group of Templates (catalog bundle).
-Dialog Tabs:: Part of a Service Dialog.
-Element:: An item on a tab in a Dialog. It can be a Button, Check Box, Drop Down List, Radio Button, Tag Control, Text Area Box, or a Text Box.
-Provisioning Dialogs:: Dialogs created for Host Provisioning, VM Migration, or VM Provisioning. The dialog name must be added to the appropriate provision instance to be processed.
-Service Catalog:: A catalog item or Catalog bundle that is available for provisioning.
-Service Dialogs:: Made up of fully customizable tabs, items, and values for use with Service provisioning.
-Template:: A template is a copy of a preconfigured virtual machine, designed to capture installed software and software configurations, as well as the hardware configuration, of the original virtual machine.
++Catalog Bundle+:: A grouping of Templates.
++Catalog Item+:: A single Template or a group of Templates (catalog bundle).
++Dialog Tabs+:: Part of a Service Dialog.
++Element+:: An item on a tab in a Dialog. It can be a Button, Check Box, Drop Down List, Radio Button, Tag Control, Text Area Box, or a Text Box.
++Provisioning Dialogs+:: Dialogs created for Host Provisioning, VM Migration, or VM Provisioning. The dialog name must be added to the appropriate provision instance to be processed.
++Service Catalog+:: A catalog item or Catalog bundle that is available for provisioning.
++Service Dialogs+:: Made up of fully customizable tabs, items, and values for use with Service provisioning.
++Template+:: A template is a copy of a preconfigured virtual machine, designed to capture installed software and software configurations, as well as the hardware configuration, of the original virtual machine.
 
 === Catalogs
 
@@ -136,7 +136,7 @@ You can share service dialogs between appliances using the export and import fea
 			
 ===== Creating a Method to Associate with the Dialog
 
-You will need to create a method that connects the values in the dialog with the provisioning request. The method should be created in the DOMAIN/Service/Provisioning/StateMachines/ServiceProvision_Template class of the +Automate+ model.
+You will need to create a method that connects the values in the dialog with the provisioning request. The method should be created in the +DOMAIN/Service/Provisioning/StateMachines/ServiceProvision_Template+ class of the +Automate+ model.
 
 [NOTE]
 ======
@@ -290,7 +290,7 @@ image:6298.png[]
 
 [NOTE]
 ======
-After the method has been created, it must be mapped to an instance in the DOMAIN/Service/Service/Provisioning/StateMachines class. The name of the instance must be specified as the +Entry Point+. This method must be called before the provision job begins.
+After the method has been created, it must be mapped to an instance in the +DOMAIN/Service/Service/Provisioning/StateMachines+ class. The name of the instance must be specified as the +Entry Point+. This method must be called before the provision job begins.
 ======
 
 ===== Associating a Method with an Automate Instance
@@ -321,7 +321,7 @@ Now that the catalog items, service dialog, dialog methods, and service provisio
 images:2362.png[]
 . Click +Display in Catalog+.
 . Select the appropriate dialog name.
-. Select the path to the appropriate ServiceProvision instance.
+. Select the path to the appropriate +ServiceProvision+ instance.
 . Click on the +Resources+ tab, then select the catalog items you want added to the bundle from the +Add a Resource+ dropdown.
 . Click +Add+.
 
@@ -329,7 +329,7 @@ A catalog bundle is created and visible in the +Service Catalog+ accordion.
 
 [NOTE]
 ======
-You should also create and specify an Entry Point in the DOMAIN/Service/Provisioning/StateMachines/Methods/CatalogBundle class for each catalog item that is part of a bundle. If you do not, then the pre and post provision processing will occur for each item in the bundle in addition to processing for the +Catalog Bundle+. To set the entry point, go into each +Catalog Item+ and check +Display in Catalog+. Then, you will see the Entry Point field.
+You should also create and specify an Entry Point in the +DOMAIN/Service/Provisioning/StateMachines/Methods/CatalogBundle+ class for each catalog item that is part of a bundle. If you do not, then the pre and post provision processing will occur for each item in the bundle in addition to processing for the +Catalog Bundle+. To set the entry point, go into each +Catalog Item+ and check +Display in Catalog+. Then, you will see the +Entry Point+ field.
 ======
 
 ===== Provisioning a Service
